[tool.poetry]
name = "conflux-rag"
version = "0.0.1"
description = "Conflux RAG empowers companies productivity through seamless integration of RAG applications and efficient information assimilation."
authors = ["Poornima P K <poornima.pk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
